<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_corner_white"
    android:padding="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialog.ThemeDetailDialog">

    <TextView
        android:id="@+id/tvcustomizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customizer"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"/>

    <ImageButton
        android:id="@+id/btnWallpapers"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:src="@drawable/img_box_fill"
        app:layout_constraintRight_toLeftOf="@id/btnIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcustomizer"
        app:layout_constraintWidth_percent="0.3" />
    <ImageButton
        android:id="@+id/btnIcons"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/frame_27"
        android:background="@null"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnWallpapers"
        app:layout_constraintTop_toBottomOf="@+id/tvcustomizer"
        app:layout_constraintWidth_percent="0.3"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/yellow_1"
        app:layout_constraintTop_toBottomOf="@id/btnWallpapers"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.3"/>
    <TextView
        android:id="@+id/tvic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/icons"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/btnIcons"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/yellow_1"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/tvic"
        android:background="@drawable/tab_indi"/>
</androidx.constraintlayout.widget.ConstraintLayout>