<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    tools:context=".fragment.ProfileUserFragment">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/size_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <ImageView
              android:layout_width="@dimen/size_100"
              android:layout_height="@dimen/size_100"
              android:layout_gravity="center"
              android:src="@drawable/ic_account"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/name"/>
          <EditText
              android:id="@+id/edtName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/save"
        android:layout_margin="@dimen/size_10"
        android:background="@drawable/tab_indi"/>
</androidx.constraintlayout.widget.ConstraintLayout>