<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    tools:context=".fragment.DetailWidgetsFargment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widgets"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>
      <androidx.cardview.widget.CardView
          android:layout_width="@dimen/_270sdp"
          android:layout_height="@dimen/_160sdp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/_10sdp"
          app:cardCornerRadius="20dp">
          <ImageView
              android:id="@+id/iv_widget"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scaleType="centerCrop"
              />
      </androidx.cardview.widget.CardView>

    </LinearLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/btnlay"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginHorizontal="@dimen/_10sdp"
       android:layout_marginVertical="@dimen/_20sdp"
       app:layout_constraintBottom_toTopOf="@id/btnSetWid">
       <Button
           android:id="@+id/btnShare"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintRight_toLeftOf="@id/btnFavorite"
           app:layout_constraintWidth_percent="0.5"
           android:background="@drawable/border_btn"
           android:textColor="@color/white"
           android:text="@string/share_now"/>
       <Button
           android:id="@+id/btnFavorite"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintLeft_toRightOf="@id/btnShare"
           app:layout_constraintWidth_percent="0.5"
           android:background="@drawable/border_btn"
           android:textColor="@color/white"
           android:text="3.8k"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btnSetWid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_widget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/tab_indi"/>
</androidx.constraintlayout.widget.ConstraintLayout>